--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <!-- Главная навигация -->
         <div class="container">
             <div class="main-nav">
-                 <nav>
-                        <a href="./index.html" lang="en" class="studio-logo">Web <span class="logo">Studio</span></a>
+                 <nav class="main-nav">
+                    <a href="./index.html" lang="en" class="studio-logo">Web <span class="logo">Studio</span></a>
                         <!-- Навигация на другие страницы -->
-                        <ul class="nav-bar">
+                    <ul class="nav-bar">
                             <li class="nav-item"><a href="./index.html" class="link">Студия</a></li>
                             <li class="nav-item"><a href="./portfolio.html" target="_blank" class="link">Портфолио</a></li>
                             <li class="nav-item"><a href="./contacts.html" target="_blank" class="link">Контакты</a></li>
-                        </ul>
+                    </ul>
                 </nav>
                  <ul class="contacts">
                     <li class="contact-item">
