--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
     <!-- Основной контент веб-студии -->
     <main>
     <!-- Основной баннер -->
-    <section class="banner">
-        <h1 class="banner-text">Эффективные решения для вашего бизнеса</h1>
-        <a href="./contacts.html" target="_blank" class="button">Заказать услугу</a>
+    <section>
+        <div class="banner">
+            <h1 class="banner-text">Эффективные решения для вашего бизнеса</h1>
+            <a href="./contacts.html" target="_blank" class="button">Заказать услугу</a>
+        </div>
     </section>
 
     <!-- Наши преимущества -->
